# echo-mind

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  ReadMe.md  TEST_PROJECTOR.md  plan.md  tempplan.md  tempscenarios.md  test_projector.py  test_projector_ui.html
.github/: pull_request_template.md
.github/workflows/: ci.yml
agent_docs/: README.md
config/agents/: config.yaml
config/api/: api.env
config/connector/: connector.env
config/guardian/: guardian.env
config/ingestor/: ingestor.env
config/observability/: README.md
config/postgres/: sync-password.sh
config/projector/: projector.env
config/traefik/: dynamic.yml
deployment/: ADMIN_UI_IMPLEMENTATION.md  ADMIN_UI_RESEARCH_REPORT.md  ADMIN_UI_SUMMARY.md  QUICK-START.md  echomind-install.conf.template  fix-docker-versions.sh  install-echomind-server.sh
deployment/docker-cluster/: .env.example  .env.host  AUTHENTIK-SETUP.md  CONTAINER-NAMING.md  PUBLIC-SERVICES.md  QUICKSTART.md  cluster.sh  cluster.sh.bak  docker-compose-host.yml  docker-compose-langfuse-host.yml  docker-compose-langfuse.yml  docker-compose-observability-host.yml  docker-compose-observability.yml  docker-compose.yml  fix_langfuse_cert.sh
docs/: DEPLOY_GOOGLE_OAUTH.sh  api-spec.md  architecture.md  database-schema.md  db-schema.md  git-workflow.md  github-setup.md  nats-messaging.md  proto-definitions.md  rbac.md  resource-requirements.md  rules.md  testing.md  webui-integration.md
docs/agents/: agent-framework-comparison.md  phase1-deep-review.md  phase1-status.md  python-agent-frameworks-comparison.md  python-moltbot-100pct-implementation-plan.md  python-moltbot-framework-selection.md  session-summary.md
docs/integrations/: google-oauth-architecture.md
docs/personal-assistant/: sandbox.md
docs/plans/: ingestor-service-plan-v2.md  ingestor-service-plan-v4.md  plan_ingestor.md
docs/services/: connector-service.md  guardian-service.md  ingestor-service.md  orchestrator-service.md  scheduler-service.md  semantic-service.md  vision-service.md  voice-service.md
docs/setup/: GOOGLE_OAUTH_QUICKSTART.md  google-oauth-limitations.md  google-oauth-setup.md
docs/user-guides/: connecting-google-services.md
scripts/: generate_proto.sh  setup-github-protection.md
src/agent/: __init__.py  agent.py  requirements.txt  test.py
src/api/: .env.example  __init__.py  config.py  converters.py  dependencies.py  main.py  pyproject.toml  requirements.txt  socketio_server.py
src/api/logic/: assistant_service.py  chat_service.py  claude_cli_provider.py  connector_service.py  document_service.py  embedder_client.py  exceptions.py  llm_client.py  permissions.py  team_service.py  upload_service.py  user_service.py
src/api/middleware/: __init__.py  error_handler.py  rate_limit.py
src/api/routes/: assistants.py  auth.py  chat.py  connectors.py  documents.py  embedding_models.py  google_oauth.py  health.py  llms.py  oauth.py  projector.py  teams.py  upload.py  users.py  webui_compat.py
src/api/tests/: test_routes_projector.py
src/api/websocket/: __init__.py  chat_handler.py  manager.py
src/connector/: Dockerfile  __init__.py  config.py  main.py  requirements.txt
src/db-schema/: schema.sql
src/echomind_lib/: CLAUDE.md  __init__.py  constants.py  pyproject.toml
src/echomind_lib/db/: __init__.py  connection.py  minio.py  models.py  nats_publisher.py  nats_subscriber.py  qdrant.py  redis.py
src/echomind_lib/db/crud/: __init__.py  agent_memory.py  assistant.py  base.py  chat_message.py  chat_session.py  connector.py  document.py  embedding_model.py  llm.py  team.py  user.py
src/echomind_lib/db/models/: __init__.py  agent_memory.py  chat_session.py  connector.py  team.py  user.py
src/echomind_lib/google/: scopes.py
src/echomind_lib/helpers/: __init__.py  auth.py  device_checker.py  minio_helper.py  readiness_probe.py
src/echomind_lib/models/: __init__.py  common_model.py  common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  fields.json  messages.json  services.json
src/echomind_lib/models/internal/: __init__.py  agent_model.py  agent_pb2.py  agent_pb2.pyi  agent_pb2_grpc.py  embedding_model.py  embedding_pb2.py  embedding_pb2.pyi  embedding_pb2_grpc.py  orchestrator_model.py  orchestrator_pb2.py  orchestrator_pb2.pyi  orchestrator_pb2_grpc.py  projector_model.py  projector_pb2.py  projector_pb2.pyi  projector_pb2_grpc.py
src/echomind_lib/models/public/: __init__.py  assistant_model.py  assistant_pb2.py  assistant_pb2.pyi  assistant_pb2_grpc.py  chat_model.py  chat_pb2.py  chat_pb2.pyi  chat_pb2_grpc.py  connector_model.py  connector_pb2.py  connector_pb2.pyi  connector_pb2_grpc.py  document_model.py  document_pb2.py  document_pb2.pyi  document_pb2_grpc.py  embedding_model_model.py  embedding_model_pb2.py  embedding_model_pb2.pyi  embedding_model_pb2_grpc.py  llm_model.py  llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py  team_model.py  team_pb2.py  team_pb2.pyi  team_pb2_grpc.py  user_model.py  user_pb2.py  user_pb2.pyi  user_pb2_grpc.py
src/echomind_lib/tests/: test_nats_subscriber.py
src/embedder/: Dockerfile  main.py  pyproject.toml
src/embedder/logic/: encoder.py
src/guardian/: Dockerfile  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
src/guardian/alerters/: __init__.py  base.py  logging_alerter.py  pagerduty_alerter.py  slack_alerter.py  webhook_alerter.py
src/guardian/logic/: __init__.py  advisory_parser.py  exceptions.py  guardian_service.py  rate_limiter.py
src/guardian/middleware/: __init__.py  error_handler.py
src/ingestor/: .env.example  Dockerfile  __init__.py  config.py  main.py  pyproject.toml  requirements.txt
src/ingestor/grpc/: __init__.py  embedder_client.py
src/ingestor/logic/: __init__.py  document_processor.py  exceptions.py  ingestor_service.py  mime_router.py
src/ingestor/middleware/: __init__.py  error_handler.py
src/migration/: main.py
src/orchestrator/: config.py  (+2 more)
tests/: __init__.py  conftest.py  requirements-test.txt
web/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
(+248 files in other folders)
