[project]
name = "echomind-embedder"
version = "0.1.0"
description = "EchoMind embedding service using SentenceTransformers"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "grpcio==1.69.0",
    "grpcio-tools==1.69.0",
    "sentence-transformers>=2.2.0",
    "torch>=2.0.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
